# audioserver

./: .gitignore  CMakeLists.txt  Id3Info.h  Id3Reader.cpp  Id3Reader.h  Listener.cpp  Listener.h  MPlayer.cpp  MPlayer.h  Player.cpp  Player.h  README.md  RequestHandler.h  Session.cpp  Session.h  SimpleDatabase.cpp  SimpleDatabase.h  http_server.cpp  http_server_async_ssl.cpp  id3TagReader.cpp  id3TagReader.h  index.html  index1.html  mpvplayer.h  saveID3TagPicture.cpp
audioserver/: CMakeLists.txt  audioServer.cpp
cmake/: config.h.in  createdirs.cmake
common/: CMakeLists.txt  Constants.cpp  Constants.h  Extractor.h  Extractor.h.autosave  FileType.h  NameGenerator.cpp  NameGenerator.h  albumlist.h  base64.cpp  base64.h  config.cpp  config.h  filesystemadditions.cpp  filesystemadditions.h  generalPlaylist.h  hash.h  logger.cpp  logger.h  mime_type.cpp  mime_type.h  misc.cpp  misc.h  repeattimer.cpp  repeattimer.h  stringmanipulator.cpp  stringmanipulator.h  urlDecode.c  urlDecode.h
config/: config.h
database/: CMakeLists.txt  NameType.h  SimpleDatabase.cpp  SimpleDatabase.h  credential.cpp  credential.h  id3repository.cpp  id3repository.h  playlist.cpp  playlist.h  playlistcontainer.cpp  playlistcontainer.h  searchaction.h  searchitem.h  songtagreader.cpp  songtagreader.h
etc/: audioserver.json  audioserver.json-base
extractId3Cover/: CMakeLists.txt  saveID3TagPicture.cpp
html/: index.html  index1.html
html/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
html/font/: fontello.eot
html/js/: audioserver.js
id3tagreader/: CMakeLists.txt  Id3Info.h  Id3Reader.cpp  Id3Reader.h  id3TagReader.cpp  id3TagReader.h  id3TagReader.h.autosave  idtag.cpp  idtag.h
itunesJsonConverter/: CMakeLists.txt  itunesJsonConverter.cpp
patches/: README  beast_part_file.patch
playerinterface/: CMakeLists.txt  MPlayer.cpp  MPlayer.h  Player.cpp  Player.h  gstplayer.cpp  gstplayer.h  mpvplayer.cpp  mpvplayer.h
playerinterface/example/: KeyHit.cpp  KeyHit.h  PlayerCmdl.cpp
systemd/: audioServer.service  mpv.service
test/: CMakeLists.txt  KeyHit.cpp  KeyHit.h  PlayerCmdl.cpp  databaseTest.cpp  gstTest.cpp  loggerTest.cpp  mpvTest.cpp  repeatTimerTest.cpp  uniqueNameGenerator.cpp  urlTest.cpp
webserver/: CMakeLists.txt  Listener.cpp  Listener.h  RequestHandler.cpp  RequestHandler.h  Session.cpp  Session.h  databaseaccess.cpp  databaseaccess.h  http_server.cpp  playeraccess.cpp  playeraccess.h  playlistaccess.cpp  playlistaccess.h  sessionhandler.cpp  sessionhandler.h  websocketsession.cpp  websocketsession.h  wifiaccess.cpp  wifiaccess.h
wifi/: CMakeLists.txt  wifi.cpp  wifi.h
wpa_generator/: CMakeLists.txt  wpa_generator.cpp
